<resources>
    <string name="app_name">OurNation</string>

    <string name="login">Username / Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="title_activity_dash_board">Dashboard</string>
    <string name="tab_text_1">Main</string>
    <string name="tab_text_2">Calendar</string>
    <string name="tab_text_3">Notes</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start">Start :</string>
    <string name="end">End :</string>
    <string name="title_activity_main2">Main2Activity</string>

</resources>
