<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/control_login_main_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:alpha="0.5"/>

    <TextView
        android:id="@+id/control_login_loading"
        android:text="loading"
        android:textColor="@color/colorPrimaryDarkText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:textSize="40dp"
        android:paddingBottom="120dp"/>
    <LinearLayout
        android:id="@+id/control_login_container"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="60dp"
        android:paddingBottom="30dp"
        android:layout_gravity="bottom"
        android:background="@color/white"
        android:visibility="gone">

        <TextView
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/log_in"
            android:textColor="@color/colorPrimaryDarkText"
            android:textStyle="bold"
            android:textSize="30dp"
            android:textAlignment="center"/>
        <EditText
            android:id="@+id/control_login_login_editText"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login"/>
        <EditText
            android:id="@+id/control_login_password_editText"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/control_signup_container"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="60dp"
        android:paddingBottom="30dp"
        android:layout_gravity="bottom"
        android:background="@color/white"
        android:visibility="gone">

        <TextView
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sign_up"
            android:textColor="@color/colorPrimaryDarkText"
            android:textStyle="bold"
            android:textSize="30dp"
            android:textAlignment="center"/>
        <EditText
            android:id="@+id/control_signup_username_editText"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"/>
        <EditText
            android:id="@+id/control_signup_email_editText"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"/>
        <EditText
            android:id="@+id/control_signup_password_editText"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"/>
    </LinearLayout>
    <FrameLayout
        android:id="@+id/control_login_button_container"
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/control_login_button"
            android:layout_gravity="left"
            android:layout_margin="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/log_in"/>
        <Button
            android:id="@+id/control_signup_button"
            android:layout_gravity="right"
            android:layout_margin="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/sign_up"/>
    </FrameLayout>
</FrameLayout>
